--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,8 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p></p>
+                        <p class="list-group-item-danger"><%= errors[0] %></p>
+                        
                         <div class="my-5">
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
