Added WYSIWYG editor in create blog post page

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -87,5 +87,12 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script>
+            $('#body').summernote({
+                placeholder: 'Hello bootstrap 4',
+                tabsize: 2,
+                height: 200
+            });
+        </script>
     </body>
 </html>
