--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,8 @@
                          <!-- Post preview-->
                          <div class="post-preview">
                             <a href="post/<%= blogposts[i]._id%>">
-                                <h2 class="post-title"><%= blogposts[i].title %></h2>
-                                <h3 class="post-subtitle"><%= blogposts[i].body %></h3>
+                                <h2 class="post-title"><%- blogposts[i].title %></h2>
+                                <h3 class="post-subtitle"><%- blogposts[i].body %></h3>
                             </a>
                             <p class="post-meta">
                                 Posted by
