Added contact functionality and image views

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                 </ul>
-                <div class="small text-center text-muted fst-italic">Copyright &copy; Ipule Pipi 2023</div>
+                <div class="small text-center text-muted fst-italic">Copyright &copy; Nilexia 2024</div>
             </div>
         </div>
     </div>
