--- a/views/post.ejs
+++ b/views/post.ejs
@@ -6,7 +6,7 @@
         <!-- Navigation-->
         <%- include('layouts/navbar') %>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('<%= blogpost.image%>')">
+        <header class="masthead" style="background-image: url('<%= blogpost.image %>')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -18,11 +18,15 @@
                                 <a href="#!"><%= blogpost.userid.username %></a>
                                 on <%= blogpost.datePosted.toDateString() %>
                             </span>
+                            <!-- Image view and download link -->
+                            <a href="<%= blogpost.image %>" target="_blank" title="Click to view full image" class="yellow-text">View Full Image</a> |
+                            <a href="<%= blogpost.image %>" download="<%= blogpost.title %>-image" title="Download Image" class="yellow-text">Download Image</a>
                         </div>
                     </div>
                 </div>
             </div>
         </header>
+        
         <!-- Post Content-->
         <article class="mb-4">
             <div class="container px-4 px-lg-5">
