--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,9 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ .yellow-text {
+  color: rgb(255, 145, 0);
+ }
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
