--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Shablog</h1>
-                            <span class="subheading">Share your blog with the world!</span>
+                            <h1>Nilexia</h1>
+                            <span class="subheading">Share your blogs with the world!</span>
                         </div>
                     </div>
                 </div>
@@ -23,7 +23,8 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!--Loop through post in database-->
-                    <% for (let i = 0; i < blogposts.length; i++) {%>
+                    <!--We want to loop through with latest at top-->
+                    <% for (let i = blogposts.length-1; i >= 0 ; i--) {%>
                          <!-- Post preview-->
                          <div class="post-preview">
                             <a href="post/<%= blogposts[i]._id%>">
