--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,6 +2,8 @@
 <html lang="en">
     <!--Head-->
     <%- include('layouts/head') %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
     <body>
         <!-- Navigation-->
         <%- include('layouts/navbar') %>
@@ -12,15 +14,20 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="post-heading">
                             <h1><%= blogpost.title %></h1>
-                            <h2 class="subheading"><%- blogpost.body %></h2>
+                            <!--<h2 class="subheading"><%- blogpost.body %></h2>-->
                             <span class="meta">
                                 Posted by
                                 <a href="#!"><%= blogpost.userid.username %></a>
                                 on <%= blogpost.datePosted.toDateString() %>
                             </span>
                             <!-- Image view and download link -->
-                            <a href="<%= blogpost.image %>" target="_blank" title="Click to view full image" class="yellow-text">View Full Image</a> |
-                            <a href="<%= blogpost.image %>" download="<%= blogpost.title %>-image" title="Download Image" class="yellow-text">Download Image</a>
+                            <a href="<%= blogpost.image %>" target="_blank" title="Click to view full image" class="yellow-text">
+                                <i class="bi bi-eye-fill"></i> View Full Image
+                            </a> |
+                            <a href="<%= blogpost.image %>" download="<%= blogpost.title %>-image" title="Download Image" class="yellow-text">
+                                <i class="bi bi-download"></i> Download Image
+                            </a>
+                            
                         </div>
                     </div>
                 </div>
