correct about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -23,8 +23,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Nilexia aim to encourage fellow people who are capable to become bloggers and share  whatever they knowledge they posses with thier circles and the world</p>
-                        <p>We believe in doing so, they will not only help others but enhance thier own knowledge and understanding in the domain</p>
+                        <p>Sharing whatever things you have with others and allowing the exchange or interface is key in growth, enlightenment and great experience.</p>
+                        <p>Nilexia aims to become the epicenter where people share ideas, skills , knowledge, news and insights with one another.</p>
+                        <p>This in turn enables faster and efficeint information transmission and hence the advance of society.</p>
                     </div>
                 </div>
             </div>
