correccted form again

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -35,22 +35,21 @@
                         <div class="my-5">
                             <form id="contactForm" method="post" action="/submit-contact-form">
                                 <div class="form-floating">
-                                    <input class="form-control" id="name" type="text" placeholder="Enter your name..."  name="name" value="<%= name%> "/>
+                                    <input class="form-control" id="name" type="text" placeholder="Enter your name..."  name="name" value="<%= name%>"/>
                                     <label for="name">Name</label>
                                     
                                 </div>
                                 <div class="form-floating">
-                                    <input class="form-control" id="email" type="email" placeholder="Enter your email..."  name="email" value="<%= email%> "/>
+                                    <input class="form-control" id="email" type="email" placeholder="Enter your email..."  name="email" value="<%= email%>"/>
                                     <label for="email">Email address</label>
                                 </div>
                                 <div class="form-floating">
-                                    <input class="form-control" id="phone" type="tel" placeholder="Enter your phone number..." name="phone"  value="<%= phone%> "/>
+                                    <input class="form-control" id="phone" type="tel" placeholder="Enter your phone number..." name="phone"  value="<%= phone%>"/>
                                     <label for="phone">Phone Number</label>
                                     
                                 </div>
                                 <div class="form-floating">
-                                    <textarea class="form-control" id="message" placeholder="Enter your message here..." style="height: 12rem"  name="message" value="<%= message%> ">
-                                    </textarea>
+                                    <textarea class="form-control" id="message" placeholder="Enter your message here..." style="height: 12rem"  name="message" value="<%= message%>"></textarea>
                                     <label for="message">Message</label>
                                     
                                 </div>
