--- a/views/login.ejs
+++ b/views/login.ejs
@@ -59,6 +59,8 @@
                                
                                 <button class="btn btn-primary" id="loginButton" type="submit">Login</button>
                             </form>
+                            <br/>
+                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="/auth/register">Register New Account </a>
                         </div>
                     </div>
                 </div>
