--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <!--Head-->
+    <!--
+          <ul class="navbar-nav ms-auto py-4 py-lg-0">
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
+                <% if(loggedIn) {%>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/posts/new">New Post</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/auth/logout">Log out</a></li>
+                    <%}
+                     %>
+                     <% if(!loggedIn) {%>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/auth/login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/auth/register">New User</a></li>
+                     <%}
+                      %>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                </ul>
+    -->
    <%- include('layouts/head') %>
     <body>
         <!-- Navigation-->
@@ -13,10 +30,21 @@
                         <div class="site-heading">
                             <h1>Nilexia</h1>
                             <span class="subheading">Share your blogs with the world!</span>
+                            <br/>
+                            <% if(!loggedIn) {%>
+                                <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="/auth/login">Login</a>
+                            <%}
+                             %> 
+                              <% if(loggedIn) {%>
+                                <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="/posts/new">Create New Blog</a>
+                            <%}
+                             %> 
+                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="/about">About</a>
                         </div>
                     </div>
                 </div>
             </div>
+           
         </header>
         <!-- Main Content-->
         <div class="container px-4 px-lg-5">
